<resources>

<!--App Name-->
    <string name="app_name">Scheduling App</string>

    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="student_number">Student Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_login">Already have an account? Log in</string>
    <string name="back">Back</string>

<!--Languages-->
    <string-array name="language_selection_array">
        <item>English</item>
        <item>Afrikaans</item>
    </string-array>

<!--Themes-->
    <string-array name="theme_selection_array">
        <item>African Sunset</item>
        <item>Light Mode</item>
        <item>Dark Mode</item>
    </string-array>

</resources>